stretch goal: fixed nav bar

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
-body{
+.body{
 	width: 1000px;
 	margin: 0 auto;
 	padding: 0 50px;
@@ -80,21 +80,29 @@ nav a{
 	text-decoration: none;
 	display: inline-block;
 	color: gray;
-	padding: 30px 35px 30px 15px;
+	padding: 30px 25px 30px 25px;
 }
 nav a:hover{
 	background-color: white;
-	color: darkgrey;
+	color: rgb(75, 75, 75);
 }
 .logo{
 	padding-top:20px;
 	padding-right: 30px;
-	float:right;
+}
+.header{
 }
 .headerTop{
+	width: 100%;
+	margin: 0 auto;
+	text-align:center;
+	top: 0;
 	background-color: aliceblue;
+	position:fixed;
+	z-index:100;
 }
 .headerBottom{
+	margin-top: 100px;
 	text-align: center;
 	padding: 0px;
 }
@@ -136,8 +144,8 @@ nav a:hover{
 main{
 	border-top: 1px solid grey;
 	border-bottom: 1px solid grey;
-	padding: 30px 0px;
-	margin: 30px 0px;
+	padding: 50px 0px;
+	margin: 30px 0px 50px 0px;
 }
 .content{
 	display:inline-block;
@@ -147,7 +155,7 @@ main{
 	width: 49%;
 }
 .middle-img{
-	padding: 30px 0;
+	padding: 50px 0;
 	width: 100%;
 }
 .mainBottom .content{
